feat: [AH-987]: Implementation of pypi /simple, upload and download (#3508)
* [AH-987]: Review comment fixes
* [AH-987]: Merge conflict fixed
* [AH-987]: Implementation of pypi /simple, upload and download
* [AH-987]: Updated lint issues
* [AH-987]: Formatting fixes
* [AH-987]: Base changes
* [AH-987]: Base changes
