# registry/app/api/openapi/contracts/artifact/types.gen.go
@@ -1,6 +1,6 @@
 // Package artifact provides primitives to interact with the openapi HTTP API.
 //
-// Code generated by github.com/deepmap/oapi-codegen/v2 version v2.1.0 DO NOT EDIT.
+// Code generated by github.com/oapi-codegen/oapi-codegen/v2 version v2.4.1 DO NOT EDIT.
 package artifact
 
 import (
@@ -28,9 +28,9 @@ const (
 const (
 	PackageTypeDOCKER  PackageType = "DOCKER"
 	PackageTypeGENERIC PackageType = "GENERIC"
-	PackageTypePYPI    PackageType = "PYPI"
 	PackageTypeHELM    PackageType = "HELM"
 	PackageTypeMAVEN   PackageType = "MAVEN"
+	PackageTypePYPI    PackageType = "PYPI"
 )
 
 // Defines values for RegistryType.
@@ -65,6 +65,7 @@ const (
 	UpstreamConfigSourceCustom       UpstreamConfigSource = "Custom"
 	UpstreamConfigSourceDockerhub    UpstreamConfigSource = "Dockerhub"
 	UpstreamConfigSourceMavenCentral UpstreamConfigSource = "MavenCentral"
+	UpstreamConfigSourcePyPi         UpstreamConfigSource = "PyPi"
 )
 
 // Defines values for WebhookExecResult.
@@ -468,7 +469,7 @@ type ListWebhooksExecutions struct {
 	PageSize *int `json:"pageSize,omitempty"`
 }
 
-// MavenArtifactDetailConfig Config for generic artifact details
+// MavenArtifactDetailConfig Config for maven artifact details
 type MavenArtifactDetailConfig struct {
 	ArtifactId *string `json:"artifactId,omitempty"`
 	GroupId    *string `json:"groupId,omitempty"`
@@ -476,6 +477,12 @@ type MavenArtifactDetailConfig struct {
 
 // PackageType refers to package
 type PackageType string
+
+// PyPiArtifactDetailConfig Config for pypi artifact details
+type PyPiArtifactDetailConfig struct {
+	ArtifactId *string `json:"artifactId,omitempty"`
+	GroupId    *string `json:"groupId,omitempty"`
+}
 
 // Registry Harness Artifact Registry
 type Registry struct {
@@ -1352,6 +1359,36 @@ func (t *ArtifactDetail) MergeMavenArtifactDetailConfig(v MavenArtifactDetailCon
 	return err
 }
 
+// AsPyPiArtifactDetailConfig returns the union data inside the ArtifactDetail as a PyPiArtifactDetailConfig
+func (t ArtifactDetail) AsPyPiArtifactDetailConfig() (PyPiArtifactDetailConfig, error) {
+	var body PyPiArtifactDetailConfig
+	err := json.Unmarshal(t.union, &body)
+	return body, err
+}
+
+// FromPyPiArtifactDetailConfig overwrites any union data inside the ArtifactDetail as the provided PyPiArtifactDetailConfig
+func (t *ArtifactDetail) FromPyPiArtifactDetailConfig(v PyPiArtifactDetailConfig) error {
+	t.PackageType = "PYPI"
+
+	b, err := json.Marshal(v)
+	t.union = b
+	return err
+}
+
+// MergePyPiArtifactDetailConfig performs a merge with any union data inside the ArtifactDetail, using the provided PyPiArtifactDetailConfig
+func (t *ArtifactDetail) MergePyPiArtifactDetailConfig(v PyPiArtifactDetailConfig) error {
+	t.PackageType = "PYPI"
+
+	b, err := json.Marshal(v)
+	if err != nil {
+		return err
+	}
+
+	merged, err := runtime.JSONMerge(t.union, b)
+	t.union = merged
+	return err
+}
+
 func (t ArtifactDetail) Discriminator() (string, error) {
 	var discriminator struct {
 		Discriminator string `json:"packageType"`
@@ -1374,6 +1411,8 @@ func (t ArtifactDetail) ValueByDiscriminator() (interface{}, error) {
 		return t.AsHelmArtifactDetailConfig()
 	case "MAVEN":
 		return t.AsMavenArtifactDetailConfig()
+	case "PYPI":
+		return t.AsPyPiArtifactDetailConfig()
 	default:
 		return nil, errors.New("unknown discriminator value: " + discriminator)
 	}
